crates/musli/tests/ui/transparent_error.stderr
error: A #[musli(transparent)] attribute can only be used on types which have a single field
 --> tests/ui/transparent_error.rs:3:10
  |
3 | #[derive(Encode, Decode)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A #[musli(transparent)] attribute can only be used on types which have a single field
 --> tests/ui/transparent_error.rs:3:18
  |
3 | #[derive(Encode, Decode)]
  |                  ^^^^^^
  |
  = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A #[musli(transparent)] attribute can only be used on types which have a single field
  --> tests/ui/transparent_error.rs:10:10
   |
10 | #[derive(Encode, Decode)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A #[musli(transparent)] attribute can only be used on types which have a single field
  --> tests/ui/transparent_error.rs:10:18
   |
10 | #[derive(Encode, Decode)]
   |                  ^^^^^^
   |
   = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc-macro derive panicked
  --> tests/ui/transparent_error.rs:14:10
   |
14 | #[derive(Encode, Decode)]
   |          ^^^^^^
   |
   = help: message: index out of bounds: the len is 0 but the index is 0

error: proc-macro derive panicked
  --> tests/ui/transparent_error.rs:14:18
   |
14 | #[derive(Encode, Decode)]
   |                  ^^^^^^
   |
   = help: message: index out of bounds: the len is 0 but the index is 0

error: proc-macro derive panicked
  --> tests/ui/transparent_error.rs:18:10
   |
18 | #[derive(Encode, Decode)]
   |          ^^^^^^
   |
   = help: message: index out of bounds: the len is 0 but the index is 0

error: proc-macro derive panicked
  --> tests/ui/transparent_error.rs:18:18
   |
18 | #[derive(Encode, Decode)]
   |                  ^^^^^^
   |
   = help: message: index out of bounds: the len is 0 but the index is 0

error: proc-macro derive panicked
  --> tests/ui/transparent_error.rs:22:10
   |
22 | #[derive(Encode, Decode)]
   |          ^^^^^^
   |
   = help: message: index out of bounds: the len is 0 but the index is 0

error: proc-macro derive panicked
  --> tests/ui/transparent_error.rs:22:18
   |
22 | #[derive(Encode, Decode)]
   |                  ^^^^^^
   |
   = help: message: index out of bounds: the len is 0 but the index is 0

error: A #[musli(transparent)] or #[musli(packed)] type cannot have named fields
  --> tests/ui/transparent_error.rs:40:13
   |
40 |     #[musli(name = "test")]
   |             ^^^^

error: A #[musli(transparent)] or #[musli(packed)] type cannot have named fields
  --> tests/ui/transparent_error.rs:48:21
   |
48 |     Variant(#[musli(name = "test")] String),
   |                     ^^^^

error: A #[musli(transparent)] or #[musli(packed)] type cannot have named fields
  --> tests/ui/transparent_error.rs:54:13
   |
54 |     #[musli(name = "test")]
   |             ^^^^

error: A #[musli(transparent)] or #[musli(packed)] type cannot have named fields
  --> tests/ui/transparent_error.rs:62:21
   |
62 |     Variant(#[musli(name = "test")] String),
   |                     ^^^^

error: A #[musli(transparent)] type cannot have an optional field
  --> tests/ui/transparent_error.rs:68:13
   |
68 |     #[musli(skip_encoding_if = String::is_empty)]
   |             ^^^^^^^^^^^^^^^^

error: A #[musli(transparent)] type cannot have an optional field
  --> tests/ui/transparent_error.rs:76:17
   |
76 |         #[musli(skip_encoding_if = String::is_empty)]
   |                 ^^^^^^^^^^^^^^^^
